--- a/servidor/views/deslogar/index.ejs
+++ b/servidor/views/deslogar/index.ejs
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Home</h1>
+  <form action="/deslogar" method="post">
+    <input type="submit" value="Deslogar">
+  </form>
 </body>
 </html>
