--- a/servidor/views/usuario/cadastrar/index.ejs
+++ b/servidor/views/usuario/cadastrar/index.ejs
@@ -9,11 +9,14 @@
 </head>
 <body>
   <section name="formulario">
-  <form class="formCadastro" action="/logar" method="POST">
-    <p name="tituloForm">Formulário de Acesso</p>
+  <form class="formCadastro" action="/usuario/cadastrar" method="POST">
+    <p name="tituloForm">Formulário de Cadastro</p>
       <label>usuário</label>
     <input class="caixa" type="text" name="" placeholder="nome de usuário"/>
       <label>senha de acesso</label>
+
+      <input class="caixa" type="text" name="" placeholder="nome de usuário"/>
+      <label>Confirmar Senha</label>
       
     <input class="caixa" type="password" name="" placeholder="senha de acesso"/>
 
