--- a/servidor/views/autenticar/index.ejs
+++ b/servidor/views/autenticar/index.ejs
@@ -5,21 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
-  <title>Autenticação</title>
+  <title>Autenticar</title>
 </head>
 <body>
-  <section name="formulario">
-  <form class="formCadastro" action="/logar" method="POST">
-    <p name="tituloForm">Formulário de Acesso</p>
-      <label>usuário</label>
-    <input class="caixa" type="text" name="" placeholder="nome de usuário"/>
-      <label>senha de acesso</label>
-      
-    <input class="caixa" type="password" name="" placeholder="senha de acesso"/>
+  <form class="form" action="logar" method="POST">
 
-    <input method="" type="submit" name="botaoEnviar"/>
+    <p name="tituloForm">Formulário de Acesso</p>
+    
+      <label>Nome de Usuário</label>
+    <input class="" type="text" name="nome" placeholder="nome"/> 
+
+      <label>Senha de Acesso</label>  
+    <input class="" type="password" name="senha" placeholder="senha"/>
+
+    
+
+    <input type="submit" name="enviar"/>
   </form>
-  </section>
-  
 </body>
 </html>
