--- a/servidor/public/css/style.css
+++ b/servidor/public/css/style.css
@@ -7,12 +7,13 @@ body{
 .tituloForm{
   padding-left: 700px;
 }
-.formCadastro{
+.form{
   color: rgba(255, 255, 255, 0.5);
   display: grid;
   max-width: 50%;
   margin-left: 450px;
   border: 2px white solid;
   padding: 10px;
+  margin-right: 400px;
 
 }
