--- a/servidor/views/listar/index.ejs
+++ b/servidor/views/listar/index.ejs
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <title>Home</title>
 </head>
 <body>
-  <form action="/deslogar" method="post">
-    <input type="submit" value="Deslogar">
-  </form>
+  <h1>Home</h1>
 </body>
 </html>
