tentando consertar o seed

--- a/servidor/views/autenticar/index.ejs
+++ b/servidor/views/autenticar/index.ejs
@@ -8,7 +8,7 @@
   <title>Autenticar</title>
 </head>
 <body>
-  <form class="form" action="logar" method="POST">
+  <form class="form" action="/logar" method="POST">
 
     <p name="tituloForm">Formulário de Acesso</p>
     
