--- a/servidor/views/cadastrar/index.ejs
+++ b/servidor/views/cadastrar/index.ejs
@@ -8,7 +8,7 @@
   <title>Cadastro</title>
 </head>
 <body>
-  <form class="form" action="/usuario/cadastrar" method="POST">
+  <form class="form" action="/usuarios/cadastrar" method="POST">
 
     <p name="tituloForm">Formulário de Cadastro</p>
     
@@ -19,7 +19,7 @@
     <input required class="" type="password" name="senha" placeholder="senha"/>
 
     <label>Confirmar Senha</label>  
-    <input required class="" type="password" name="senha" placeholder="senha"/>
+    <input required class="" type="password" name="confirmar" placeholder="confirmar senha"/>
 
     <input type="submit" name="enviar"/>
   </form>
