commit-pré projeto final

--- a/servidor/views/autenticar/index.ejs
+++ b/servidor/views/autenticar/index.ejs
@@ -13,14 +13,12 @@
     <p name="tituloForm">Formulário de Acesso</p>
     
       <label>Nome de Usuário</label>
-    <input class="" type="text" name="nome" placeholder="nome"/> 
+    <input type="text" name="nome" placeholder="nome"/> 
 
       <label>Senha de Acesso</label>  
-    <input class="" type="password" name="senha" placeholder="senha"/>
+    <input type="password" name="senha" placeholder="senha"/>
 
-    
-
-    <input type="submit" name="enviar"/>
+    <input type="submit" name="btnenviar" id="btnenviar"/>
   </form>
 </body>
 </html>
