--- a/servidor/public/css/style.css
+++ b/servidor/public/css/style.css
@@ -4,16 +4,77 @@ body{
   text-decoration: none;
   font-family: 'Times New Roman', Times, serif;
 }
-.tituloForm{
-  padding-left: 700px;
+
+p{
+  color: white;
+  text-decoration: underline;
+  margin-left: 155px;
+  font-size: large;
 }
+
+label{
+  padding-top: 13px;
+  margin-left: 172px;
+
+}
+
 .form{
-  color: rgba(255, 255, 255, 0.5);
+  color: gainsboro;
   display: grid;
   max-width: 50%;
   margin-left: 450px;
   border: 2px white solid;
+  border-radius: 20px;
   padding: 10px;
   margin-right: 400px;
+  margin-top: 120px;
+}
+input{
+  background-color: gray;
+  max-width: 150px;
+  max-height: 50px;
+  margin-left: 150px;
+}
+::placeholder{
+  color: black;
+  padding-left: 55px;
+}
+#btnenviar{
+  padding: 5px;
+  margin-top: 10px;
+  max-width: 100px;
+  background-color: rgb(207, 56, 56);
+  color: white;
+  border-color: white;
+  margin-left: 180px;
+}
 
+h1{
+  color: white;
+  font-size: x-large;
+  margin-left: 550px;
+  margin-bottom: 30px;
+  text-decoration: underline;
+
+}
+.userlist{
+  color: white;
+  border: 2px solid white;
+  border-radius: 30px;
+  padding-bottom: 10px;
+  padding-left: 50px;
+  padding-right: 150px;
+  padding-top: 20px;
+  margin-left: 470px;
+  max-width: 200px;
+}
+
+#btnlogout{
+  padding: 5px;
+  max-width: 100px;
+  background-color: rgb(207, 56, 56);
+  color: white;
+  border-color: white;
+  margin-left: 630px;
+  margin-bottom: 20px;
 }
