--- a/servidor/views/cadastrar/index.ejs
+++ b/servidor/views/cadastrar/index.ejs
@@ -10,7 +10,7 @@
 <body>
   <form class="form" action="/usuarios/cadastrar" method="POST">
 
-    <p name="tituloForm">Formulário de Cadastro</p>
+    <p name="tituloForm">Inserir Novo Usuário</p>
     
       <label>Nome de Usuário</label>
     <input required class="" type="text" name="nome" placeholder="nome"/> 
@@ -19,9 +19,9 @@
     <input required class="" type="password" name="senha" placeholder="senha"/>
 
     <label>Confirmar Senha</label>  
-    <input required class="" type="password" name="confirmar" placeholder="confirmar senha"/>
+    <input required class="" type="password" name="confirmar" placeholder="confirmar"/>
 
-    <input type="submit" name="enviar"/>
+    <input type="submit" name="btnenviar" id="btnenviar"/>
   </form>
 </body>
 </html>
