--- a/cliente/src/app/pages/register/style.css
+++ b/cliente/src/app/pages/register/style.css
@@ -7,7 +7,6 @@ body{
   
   p{
     color: white;
-    text-decoration: underline;
     margin-left: 155px;
     font-size: large;
   }
@@ -20,11 +19,10 @@ body{
   
 #campos{
     color: gainsboro;
-
     max-width: 50%;
     margin-left: 450px;
     border: 2px white solid;
-    border-radius: 20px;
+    border-radius: 30px;
     padding: 10px;
     margin-right: 400px;
     margin-top: 120px;
@@ -34,6 +32,8 @@ body{
     max-width: 150px;
     max-height: 50px;
     margin-left: 150px;
+    margin-top: 7px;
+    border-radius: 2px;
   }
   ::placeholder{
     color: black;
@@ -44,16 +44,16 @@ body{
     color: white;
     font-size: x-large;
     margin-left: 550px;
-    margin-bottom: 30px;
-    text-decoration: underline;
-  
+    margin-bottom: 30px;  
   }
+  
   #enviar{
     padding: 5px;
     max-width: 100px;
     background-color: rgb(207, 56, 56);
     color: white;
     border-color: white;
-    margin-left: 630px;
+    margin-left: 195px;
+    margin-top: 20px;
     margin-bottom: 20px;
   }
