--- a/cliente/src/app/style/style.css
+++ b/cliente/src/app/style/style.css
@@ -21,18 +21,18 @@ body{
 #campos{
     color: gainsboro;
     max-width: 50%;
-    margin-left: 450px;
+    margin-left: 50px;
     border: 2px white solid;
     border-radius: 20px;
     padding: 10px;
-    margin-right: 400px;
+    margin-right: 10px;
     margin-top: 120px;
   }
   input{
     background-color: gray;
     max-width: 150px;
     max-height: 50px;
-    margin-left: 150px;
+    margin-left: 20px;
   }
   ::placeholder{
     color: black;
@@ -42,7 +42,7 @@ body{
   h1{
     color: white;
     font-size: x-large;
-    margin-left: 550px;
+    margin-left: 600px;
     margin-bottom: 30px;
     text-decoration: underline;
   
@@ -53,6 +53,12 @@ body{
     background-color: rgb(207, 56, 56);
     color: white;
     border-color: white;
-    margin-left: 630px;
     margin-bottom: 20px;
+    margin-left: 10px;
+  }
+  #formesquerda{
+    background-color: gray;
+    max-width: 150px;
+    max-height: 50px;
+    margin-left: 450px;
   }
